# Final_Project

FinalProjectCode/: CMakeLists.txt  FinalProject.ui  FinalProjectApp.cxx  FinalProjectApp.h  FinalProjectWindow.cxx  FinalProjectWindow.h  README  main.cxx
FinalProjectCode/DLL and XML Files/: README.txt
FinalProjectDocumentation/: Face tracking as an indication of attention.pptx  logFileDemo.txt  nullTrial.eps  successfulTirial.eps  unsuccessfulTrial.eps
